# ncnn-with-cuda

./: CMakeLists.txt  LICENSE.txt  README.md
benchmark/: CMakeLists.txt  benchncnn.cpp  benchncnn_gpu.cpp  retinaface-benchmark.cpp
cmake/: ncnnConfig.cmake.in  ncnn_add_layer.cmake
examples/: retinaface.cpp
src/: CMakeLists.txt  allocator.cpp  allocator.h  c_api.cpp  cuda_util.h  gpu.cpp  gpu.h  layer.cpp  layer.h  layer_registry_cuda.h.in  mat.cpp  mat.h  modelbin.h  net.cpp  net.h  option.h  pipeline.h  platform.h.in
src/layer/: absval.cpp  argmax.cpp  batchnorm.cpp  bias.cpp  binaryop.cpp  bnll.cpp  cast.cpp  clip.cpp  concat.cpp  convolution.cpp  convolution.h  convolutiondepthwise.cpp  convolutiondepthwise.h  crop.cpp  crop.h  deconvolution.cpp  deconvolutiondepthwise.cpp  deepcopy.cpp  dequantize.cpp  detectionoutput.cpp  dropout.cpp  eltwise.cpp  elu.cpp  embed.cpp  exp.cpp  expanddims.cpp  flatten.cpp  gemm.cpp  groupnorm.cpp  hardsigmoid.cpp  hardswish.cpp  innerproduct.cpp  innerproduct.h  input.cpp  input.h  instancenorm.cpp  interp.cpp  layernorm.cpp  log.cpp  lrn.cpp  (+46 more)
src/layer/cuda/: absval_cuda.cpp  absval_cuda.cu  absval_cuda.h  batchnorm_cuda.cpp  batchnorm_cuda.cu  batchnorm_cuda.h  bias_cuda.cpp  bias_cuda.cu  bias_cuda.h  (+49 more)
tests/: CMakeLists.txt  test_batchnorm.cpp  test_bias.cpp  test_binaryop.cpp  test_bnll.cpp  test_concat.cpp  test_convolution.cpp  test_convolutiondepthwise.cpp  test_flatten.cpp  test_innerproduct.cpp  test_packing.cpp  test_padding.cpp  test_pooling.cpp  test_relu.cpp  test_reshape.cpp  test_softmax.cpp  testutil.h
(+72 files in other folders)
